# husk-scheme

./: AUTHORS  CHANGELOG  ChangeLog.markdown  Makefile  README  README.markdown  TODO-313-dev.txt  _config.yml  about.html  analysis-nary.txt  core.hs  default.css  define-values.scm  docs.tar.bz2  documentation.html  erato.scm  execution-todo.txt  get-husk.html  husk-scheme.cabal  index.html  lambda-test-cases.scm  macro-expansion-tests.scm  macro.hs  main.hs  mhtest.scm  news.html  numerical.hs  other-side-of-macro-hygiene.scm  parser.hs  shell.hs  stdlib.scm  string-copy.scm  string-map.scm  test.hs  test.scm  types.hs  variables.hs  vector-map.scm
.github/workflows/: ci-matrix.yml
API/3.12/: Language-Scheme-Compiler-Libraries.html  Language-Scheme-Compiler-Types.html  Language-Scheme-Compiler.html  Language-Scheme-Core.html  Language-Scheme-Macro.html  (+44 more)
Skim/: Repl.hs
_includes/: footer.html  google-analytics.html  menu-post.html  menu.html  sidebar-post.html  sidebar.html
_layouts/: post.html
_plugins/: docbox.rb  scmdoc.rb
_posts/: 2011-09-21-Older-Releases.markdown  2011-11-16-Released-Version-3.4.1.markdown  2011-11-24-Released-Version-3.4.2.markdown  2011-12-11-Released-Version-3.4.3.markdown  2011-12-18-Released-Version-3.4.4.markdown  2012-01-25-Released-Version-3.5.1.markdown  2012-02-05-Released-Version-3.5.2.markdown  2012-02-16-Dynamic-Linking.markdown  2012-02-17-Released-Version-3.5.3.markdown  2012-03-27-Released-Version-3.5.4.markdown  2012-05-xx-Released-Version-3.5.5.markdown  2012-07-04-Released-Version-3.5.6.markdown  2012-10-04-Released-Version-3.5.7.markdown  2012-11-10-Released-Version-3.6.markdown  2012-11-15-Released-Version-3.6.1.markdown  2012-12-10-Understanding-Macros.markdown  2012-12-11-Continuations.bak  2012-12-17-Continuations.markdown  2012-12-23-Released-Version-3.6.2.markdown  2013-02-04-Released-Version-3.6.3.markdown  2013-02-21-Released-Version-3.7.markdown  2013-03-19-Released-Version-3.8.markdown  2013-05-06-Released-Version-3.9.markdown  2013-06-07-Released-Version-3.10.TODO  2013-06-07-Released-Version-3.10.markdown  2013-06-xx-Released-Version-3.10.markdown  2013-07-17-Released-Version-3.11.markdown  2013-10-19-Released-Version-3.13.markdown  2013-11-14-Released-Version-3.14.markdown  2013-12-xx-Released-Version-3.15.markdown  2014-02-26-Released-Version-3.16.markdown  2014-02-xx-Released-Version-3.16.markdown  2014-03-10-Released-Version-3.16.1.markdown  2014-04-xx-Released-Version-3.17.markdown  2014-06-07-Released-Version-3.17.1.markdown  2014-08-07-Released-Version-3.18.markdown  2014-08-xx-Released-Version-3.18.markdown  2015-01-31-Released-Version-3.19.markdown  2015-09-29-Released-Version-3.19.1.markdown  2016-04-09-Released-Version-3.19.2.markdown  (+5 more)
css/: docs.css
docs/: .notes  Continuations.markdown  Releasing-notes.md  binding-constructs.html  booleans.html  chars.html  conditionals.html  control.html  delayed-evaluation.html  equality.html  expr.html  ffi.html  hashtbls.html  io.html  iteration.html  lists.html  members.txt  memtest-todo.txt  numbers.html  r5rs-deviations.html  sequencing.html  srfi.html  std-proc.html  strings.html  symbols.html  user-manual.html  variable-notes.txt  vectors.html
examples/: cat.scm  clear-vt100.scm  collatz.scm  coroutines-01.scm  euler-0021.scm  fact.scm  factorial.scm  ffi.scm  fizz-buzz.scm  gcd-w-cmd-line-args.scm  gcd.scm  large-list.scm  macros.scm  simple-file-io.scm  simple-file-io.txt  tail-call-optimization.scm  tco.scm  when.scm  yin-yang.scm
extensions/: Makefile  husk-scheme-libs.cabal  json.scm
extensions/Language/Scheme/Plugins/: Json.hs
extensions/examples/: json.scm
extensions/hs-src/Language/Scheme/Plugins/: JSON.hs  Json.hs
hs-src/: Paths_husk_scheme.hs  Test.hs  ffi-test.hs  huskc.hs  shell.hs  test.hs
lib/: core.scm  cxr.scm  lazy.scm  meta.scm  modules.scm  notes.txt  pp-sexp.scm  run.scm  stdlib.scm  test-import-env.scm
manual/: _config.yml  command-line-tools.html  compatibility.html  default.css  explicit-renaming-transformer.html  ffi.html  getting-started.html  haskell-api.html  haskell-interface.html  husk-libs.html  index.html  libraries-and-extensions.html  macro-debugging.html  node1.html  node10.html  node103.html  node105.html  node106.html  node107.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  (+64 more)
misc/: 166.scm  A.hs  B.hs  Continuations.markdown  Paths_husk_scheme.hs  comp-test.scm  compile.sh  ghc-husk-scheme.spec  macro-expansion-tests.scm  test-bad.hs  test-good.hs  test.scm
scm-unit-tests/: macro-testbed.scm  r5rs_pitfall.scm  skim-unit.scm  summarize.scm  t-backquote.scm  t-case.scm  t-closure.scm  t-cond.scm  t-cont.scm  t-delay.scm  t-eval.scm  t-exec.scm  t-extensions.scm  t-hashtable.scm  t-io.scm  t-iteration.scm  t-macro-hygiene.scm  t-macro-lists.scm  t-macro-ref-trans.scm  t-macro-refactoring.scm  t-macro.scm  t-nested-macro.scm  t-numerical-ops.scm  t-parser.scm  t-scoping.scm  t-special-forms.scm  t-standard-procedures.scm  t-stdlib.scm  t-string.scm  t-vector.scm  test.scm
scripts/: build.scm  huski.el
srfi/: srfi-1.scm  srfi-55.scm
test-scripts/: t-case.sh  t-cond.scm  t-cond.sh
tests/: 162.sld  chibi-r5rs-tests.scm  compiler-run-tests.scm  r5rs_pitfall.scm  run-tests.scm  run-tests7.scm  skim-unit.scm  syntax-rule-dark-corner.scm  t-backquote.scm  t-bytevector.scm  t-case-lambda.scm  t-case.scm  t-cond-expand.scm  t-cont.scm  t-delay.scm  t-er-macro.scm  t-exec.scm  t-extensions.scm  t-hashtable.scm  t-io.scm  t-libs.scm  t-macro-hygiene.scm  t-macro-ref-trans.scm  t-macro.scm  t-numerical-ops.scm  t-parser.scm  t-scoping.scm  t-special-forms.scm  t-srfi-1.scm  t-srfi-2.scm  t-srfi-39.scm  t-srfi-9.scm  t-standard-procedures.scm  t-stdlib.scm  t-storage.scm  t-string.scm  t-vector.scm
xargs-tests/: run.sh  test-if.scm  test-set.hs  test-set.scm  test.scm  test2.scm  test3.scm
(+935 files in other folders)
